# kriegssystem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ccbuild.sh  ccbuild.txt  run.sh  run.txt  test-run.sh
scripts/: build.sh  debug.sh  test_failed.sh  test_success.sh
src/: ground-engine.c  naval-engine.c  naval_engine.c
src/naval/: combat.c  combat.h  prototypes.c  prototypes.h  vessels.c  vessels.h
src/static/: messages.h  utils.c  utils.h
